<resources>

    <string name="app_name">Alarmed+</string>
    <string name="menu_settings">Settings</string>
    <string name="createAlarmSaveButtonText">Set alarm</string>
    <string name="stop_alarm">Stop the ALARM!</string>
    <string name="title_activity_browse_alarms">Alarmed+</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="add_alarm_btn">Add alarm</string>
    <string name="title_activity_math">U mad bro?</string>
    <string name="activity_math_text_holder">3 * 3 = ?</string>
    <string name="activity_math_submit_btn">Submit</string>
    <string name="activity_math_header_holder">What Is The Product?</string>
    <string name="recurring_alarms">Select recurring days</string>
    <string name="ok_button">OK</string>
    <string name="title_activity_memory">MemoryActivity</string>
    <string name="activity_create_alarm_tone_selector_button">Select alarm sound</string>
    <string name="text_enable_vibration">Enable vibration</string>
    <string name="text_select_ringtone_button">Select alarm tone</string>
    <string name="text_select_volume_settings_button">Select volume</string>
    <string name="title_alarm_tone_selector">Pick alarm tone</string>
    <string name="toast_user_cheating">No cheating!</string>
    <string name="select_alarm_tone">Select Alarmtone:</string>

</resources>