<!--
     Copyright (C) 2012 Joakim Persson, Daniel Augurell, Adrian Bjugard, Andreas Rolen

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/activity_math_submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activity_math_answer_text"
        android:layout_alignRight="@+id/activity_math_answer_text"
        android:layout_centerVertical="true"
        android:onClick="onSubmitButtonPressed"
        android:text="@string/activity_math_submit_btn" />

    <EditText
        android:id="@+id/activity_math_answer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_math_submit_btn"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="numberSigned" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/math_activity_problem_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_math_answer_text"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_math_text_holder"
        android:textSize="40sp"
        tools:context=".MathActivity" />

    <TextView
        android:id="@+id/math_activity_problem_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/math_activity_problem_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/activity_math_header_holder"
        android:textSize="30sp"
        tools:context=".MathActivity" />

</RelativeLayout>